<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">OneKey</string>
  <string name="generate">Generate</string>
  <string name="settings">Settings</string>
  <string name="close">Close</string>
  <string name="master_key">MasterKey:</string>
  <string name="site_key">SiteKey:</string>
  <string name="length">Length:</string>
  <string name="password">Password for you:</string>
  <string name="hint_master">(Your master password)</string>
  <string name="hint_site">(e.g. \"google\", \"facebook\")</string>
  <string name="hint_password">
    "(Click \"Generate\" below to get your password)"
  </string>
  <string name="ticker">Click to generate password</string>
  <string name="chrome_toast">
    "Looks like you are using Chrome."
    "\nTry share the URL to OneKey to get your Sitekey prefilled."
  </string>
  <string name="clip_toast">Generated password copied to clipboard</string>
  <string name="clear_clip_toast">Clipboard cleared (via OneKey)</string>
  <string name="title_settings">OneKey Settings</string>
  <string name="empty_master_toast">Your MasterKey is empty.</string>

  <!-- Preference headers -->
  <string name="pref_header_prefill">Prefill Sitekey</string>
  <string name="pref_header_clipboard">Clipboard</string>
  <string name="pref_header_lengths">Password Lengths</string>
  <string name="pref_header_service">Show Notification</string>
  <string name="pref_header_about">About</string>
  <string name="pref_header_about_summary">OneKey v1.0.1</string>

  <!-- Prefill preference -->
  <string name="pref_title_usage">
    "From current app"
  </string>
  <string name="pref_desc_usage_yes">
    "Try to prefill the sitekey from"
    "the package name of the last running app."
    "\nThis is just a best guess, please use with caution."
  </string>
  <string name="pref_desc_usage_no">
    "Only prefill the sitekey when sharing URL to OneKey."
  </string>
  <string name="pref_title_permission_usage">
    "Grant OneKey permission"
  </string>
  <string name="pref_desc_permission_usage">
    "Click here to go to Usage Access System Settings."
    "\nOneKey needs this permission in order to"
    "prefill sitekey from current app."
  </string>
  <string name="pref_desc_prefill_share">
    "ProTip: You can always just share the URL from browser to OneKey to"
    "get sitekey prefilled from the URL."
  </string>

  <!-- Clipboard preference -->
  <string name="pref_title_copy_clipboard">
    "Auto clipboard"
  </string>
  <string name="pref_desc_copy_clipboard_yes">
    "Copy generated password to clipboard"
    "when you click the \"Generate\" button."
  </string>
  <string name="pref_desc_copy_clipboard_no">
    "Do not copy generated password to clipboard"
    "when you click the \"Generate\" button."
  </string>
  <string name="pref_title_clear_time">Time to clear clipboard</string>
  <string-array name="pref_clear_time_titles">
    <item>30 seconds</item>
    <item>1 minute</item>
    <item>5 minutes</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_clear_time_values">
    <item>30</item>
    <item>60</item>
    <item>300</item>
    <item>-1</item>
  </string-array>

  <!-- Clipboard preference -->
  <string name="pref_title_length1">Length 1</string>
  <string name="pref_title_length2">Length 2</string>
  <string name="pref_title_length3">Length 3</string>
  <string name="pref_title_length4">Length 4</string>
  <string name="pref_desc_length">
    "ProTip: You don't have to keep them sorted."
  </string>

  <!-- Service preference -->
  <string name="pref_title_service">Show notification</string>
  <string name="pref_desc_service">
    "Show a notification to quickly access OneKey."
  </string>
  <string name="pref_desc_service_tip">
    "ProTip: If you are on Nougat or newer,"
    "you can add a QuickTile for quick access to OneKey."
  </string>

  <!-- About screen -->
  <string name="about">OneKey v1.0.1 by Yuxuan \'fishy\' Wang</string>
  <string name="about_github">This is an Open Source project.</string>
  <string name="credits">Credits</string>
  <string name="credit_123_password">
    "This software is inspired by and compatible to 123 Password by tension7 at"
    "https://github.com/tension7/One-Password/."
  </string>
  <string name="credit_icon">
    "App icon was originally made by SimpleIcon, used under CC 3.0 BY."
  </string>
</resources>
